--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <ul id="navigation">
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#content">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
     </section>
 
     <section class="s2">
-        <div class="main-container">
+        <div id="content" class="main-container">
             <h3 style="text-align: center;">Get In Touch</h3>
             <form id="contact-form" action="https://formspree.io/f/mwkwaanw" method="POST">
                 <label>Name</label>
