--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,9 @@
                 </div>
 
                 <div class="social-links">
-                    <img src="images/github.jpg" alt="github">
+                    <h4 class="social-text">GitHub</h4>
+                    <div class="github-card" data-github="alextache" data-width="350" data-height="" data-theme="default"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                 </div>
 
             </div>
