--- a/public/project-1.html
+++ b/public/project-1.html
@@ -29,7 +29,7 @@
 		</a>
 
 		<ul id="navigation">
-			<li><a href="index.html#contact">Contact</a></li>
+			<li><a href="index.html#projects">Go Back</a></li>
 
 		</ul>
 	</div>
