--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-</head>
+<title>Post Name</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+</head> 
 <body>
-    <h1>404 Not Found</h1>
+	<div class="nav-wrapper">
+		<a href="index.html">
+			<div class="dots-wrapper">
+				<div id="dot-1" class="browser-dot"></div>
+				<div id="dot-2" class="browser-dot"></div>
+				<div id="dot-3" class="browser-dot"></div>
+			</div>
+		</a>
+		<ul id="navigation">
+			<li><a href="index.html">Go Back</a></li>
+		</ul>
+	</div>
+
+	<div class="main-container">
+		<br>
+		
+		<a href="index.html"><h1>404 - Not found :(</h1></a>	
+
+        <p><a href="index.html">Please go back</a></p>
+
+	</div>
+
 </body>
 </html>
