--- a/public/project-2.html
+++ b/public/project-2.html
@@ -42,39 +42,32 @@
 	<div class="main-container">
 		<br>
 		
-		<a target="__blank" href="https://angular-last.herokuapp.com/"><h3>Pic-Slash</h3></a>	
+		<a target="__blank" href="https://www.latepixel.com/"><h3>LatePixel</h3></a>	
 
-		<p><a target="__blank" href="https://angular-last.herokuapp.com/">Project live here</a></p>
-
-		<p>This web application was part of my major project. It was my first interaction with the MEAN stack and it allowed me to explore other ways of developing than what I have learned in university. It's powered by the <a target="__blank" href="https://unsplash.com/developers">Unsplash API</a> with the purpose of integrating image cropping and renaming in the browser, while providing a large base of high-quality royalty-free pictures.
-		<br>
-		<br>
-		Using the MEAN stack resulted in an application that provides results almost instantly, and can switch between the crop and search mode without having to reload the results.
+		<p><a target="__blank" href="https://www.latepixel.com/">Project live here</a></p>
+		<p>LatePixel is a concept agency that helps photographers of any level join the online world. From providing portfolios to training, it makes sure photographers are ready to have a successful  career. 
+        <a target="__blank" href="https://lidiadehita.com/">This</a> is an example of one of the portfolios the agency has made. 
 
 		<h5>Technologies:</h5>
 		<ul>
 			<li>- HTML5 + CSS3</li>
 			<li>- Bootstrap4</li>
-			<li>- Angular</li>
-			<li>- Node.js</li>
-			<li>- Typescript</li>
-			<li>- Express.js</li>
-			<li>- Unsplash API</li>
+			<li>- Javascript</li>
 		</ul>
 
-		<h5>Search Results:</h5>
+		<h5>LatePixel:</h5>
 		<div class="img-container">
-			<img src="images/p1-search.png">
+			<img src="images/p2-main.png">
+		</div>
+        <br>
+        <br>
+		<div class="img-container">
+			<img src="images/p2-second.png">
 		</div>
 
-		<h5>Croping:</h5>
+		<h5>Portfolio:</h5>
 		<div class="img-container">
-			<img src="images/p1-crop.png">
-		</div>
-
-		<h5>Cropped result:</h5>
-		<div class="img-container">
-			<img class="img-result" src="images/p1-result.png">
+			<img class="img-result" src="images/p2-portfolio.png">
 		</div>
 
 		<br>
